[project]
name = "pd-code-components"
version = "0.0.1"
description = "get all components from a link pd code."
authors = [
    {name = "GGN_2015",email = "premierbob@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"